# backend

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
api/: urls.py  views.py
backend/: settings_sample.py
backend/backend/: settings.py
