[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolomatskiy <58207913+lemontree210@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.5"
icecream = "^2.1.3"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
